[package]
name = "saa"
description = "Low-level synchronization primitives providing both asynchronous and synchronous interfaces."
documentation = "https://docs.rs/saa"
version = "4.3.1"
authors = ["wvwwvwwv <wvwwvwwv@me.com>"]
edition = "2024"
rust-version = "1.85.0"
readme = "README.md"
repository = "https://github.com/wvwwvwwv/synchronous-and-asynchronous/"
license = "Apache-2.0"
categories = ["asynchronous", "concurrency", "data-structures"]
keywords = ["async", "concurrent", "synchronization"]

[workspace]
members = [".", "examples"]

[dependencies]
loom = { version = "0.7", optional = true }

[features]
loom = ["dep:loom"]

[dev-dependencies]
criterion = "0.7"
futures = "0.3"
tokio = { version = "1.47", features = ["full"] }

[[bench]]
name = "lock"
harness = false

[[bench]]
name = "semaphore"
harness = false
